--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,13 +23,41 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+@media screen and (max-width: 480px) {
+  .full-width-img {
+  margin: auto;
+  width: 90%;
+  body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  max-width: 432px;
   min-height: 100vh;
-}
+}}}
+
+@media screen and (max-width: 768px) {
+  .full-width-img {
+  margin: auto;
+  width: 90%;
+  body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  max-width: 691px;
+  min-height: 100vh;
+}}}
+
+@media screen and (max-width: 1024px) {
+  .full-width-img {
+  margin: auto;
+  width: 90%;
+  body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  max-width: 921px;
+  min-height: 100vh;
+}}}
 
 h1 {
   font-size: 3.2em;
