--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,41 +23,13 @@ a:hover {
   color: #535bf2;
 }
 
-@media screen and (max-width: 480px) {
-  .full-width-img {
-  margin: auto;
-  width: 90%;
-  body {
+body {
   margin: 0;
   display: flex;
   place-items: center;
-  max-width: 432px;
+  min-width: 320px;
   min-height: 100vh;
-}}}
-
-@media screen and (max-width: 768px) {
-  .full-width-img {
-  margin: auto;
-  width: 90%;
-  body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  max-width: 691px;
-  min-height: 100vh;
-}}}
-
-@media screen and (max-width: 1024px) {
-  .full-width-img {
-  margin: auto;
-  width: 90%;
-  body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  max-width: 921px;
-  min-height: 100vh;
-}}}
+}
 
 h1 {
   font-size: 3.2em;
