--- a/client/src/components/Style/Home.css
+++ b/client/src/components/Style/Home.css
@@ -29,3 +29,15 @@ body {
     margin: auto;
     display: block;
 }
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.dropzone {
+    border: 2px solid black;
+}
