--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,13 +23,38 @@ a:hover {
   color: #535bf2;
 }
 
+/* Media query for screens smaller than 600px */
+@media only screen and (max-width: 600px) {
 body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 150px;
   min-height: 100vh;
 }
+}
+
+/* Media query for screens between 600px and 900px */
+@media only screen and (min-width: 600px) and (max-width: 900px) {
+  body {
+    margin: 0;
+    display: flex;
+    place-items: center;
+    min-width: 225px;
+    min-height: 100vh;
+  }
+  }
+
+  /* Media query for screens larger than 900px */
+  @media only screen and (min-width: 900px){
+    body {
+      margin: 0;
+      display: flex;
+      place-items: center;
+      min-width: 320px;
+      min-height: 100vh;
+    }
+    }
 
 h1 {
   font-size: 3.2em;
